kubernetes/main/apps/mealie/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  labels:
    pod-security.kubernetes.io/audit: privileged 
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    goldilocks.fairwinds.com/enabled: "true"
