kubernetes/main/apps/mealie/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mealie
  name: mealie-deployment
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/Ljubljana
            - name: ALLOW_SIGNUP
              value: "false"
            - name: BASE_URL
              value: "https://recept.${SECRET_EXTERNAL_DOMAIN}"
          image: ghcr.io/mealie-recipes/mealie:v2.8.0
          ports:
            - containerPort: 9000
              name: http
          imagePullPolicy: IfNotPresent
          name: mealie
          volumeMounts:
            - mountPath: /app/data
              name: data
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie
